blocks/table/table.css
.table {
  width: 100%;
  overflow-x: auto;
}

.table table {
  width: 100%;
  max-width: 100%;
  border-collapse: collapse;
  font-size: var(--body-font-size-xs);
}

@media (width >=600px) {
  .table table {
    font-size: var(--body-font-size-s);
  }
}

@media (width >=900px) {
  .table table {
    font-size: var(--body-font-size-m);
  }
}

.table table thead tr {
  border-top: 2px solid #dadada;
  border-bottom: 2px solid #dadada;
}

.table table tbody tr {
  border-bottom: 1px solid #dadada;
}

.table table th {
  font-weight: 700;
}

.table table th,
.table table td {
  padding: 0.5em;
  text-align: left;
}

.table table th p,
.table table td p {
  margin: 0;
}

.table table td p+p {
  margin-top: 0.25em;
}

/* no header variant */
.table.no-header table tbody tr {
  border-top: 1px solid #dadada;
}

/* striped variant */
.table.striped tbody tr:nth-child(odd) {
  background-color: var(--light-color);
}

/* bordered variant */
.table.bordered table th,
.table.bordered table td {
  border: 1px solid #dadada;
}

.table-marquee1 .table {
  background-color: #eb1933;
  overflow-x: visible;
}

.table-marquee1 .table-wrapper {
  padding: inherit !important;
  max-width: max-content !important;
}

.table-marquee1 tbody {
  display: flex;
  gap: 80px;
  white-space: nowrap;
  animation: scroll 50s linear infinite;
}

.table-marquee1 .table tbody tr a {
  background-image: url('https://themeloto.com/wps/transpo/wp-content/uploads/2024/11/transpo-slider2.jpg');
  opacity: 1;
  color: transparent;
  font-size: 100px;
  background-clip: text;
  margin: 0px 40px;
  background-position: center;
}


@keyframes scroll {
  from {
    transform: translateX(0);
  }

  to {
    transform: translateX(-100%);
  }
}

